--- a/Intermediate HTML and CSS/Project Sign-up Form/myapp/app/views/home/index.html.erb
+++ b/Intermediate HTML and CSS/Project Sign-up Form/myapp/app/views/home/index.html.erb
@@ -1,9 +1,88 @@
-<h1>Welcome, this is the home page</h1>  
-  
-<button type="button" 
-        class="btn btn-lg btn-danger" 
-        data-bs-toggle="popover" 
-        title="Popover title" 
-        data-bs-content="Amazing content, right ?">
-        Click to toggle popover
-</button>  
+<!-- LOTS of inspiration from: https://mdbootstrap.com/docs/standard/extended/login/ -->
+
+<section class="vh-100">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-4 px-0 d-none d-sm-block">
+        <img src="https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+          alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left; background-image: url(<%= asset_path('background.avif') %>);">
+      </div>
+      <div class="col-sm-8 text-black">
+
+        <div class="mt-5 px-3 ms-xl-4">
+          <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
+          <p class="fw-bold mb-0">This is not a real online service! You know you need something 
+          like this in your life to help you realize your deepest dreams.</p>
+          <p class="fw-bold mb-0">Sign up now to get started.</p>
+        </div>
+
+        <div class="mt-3 px-3 ms-xl-4">
+          <p class="fw-bold mb-0">You <i>know</i> you want to.</p>
+        </div>
+
+        <div class="d-flex align-items-center h-custom-2 px-3 ms-xl-4 mt-5 pt-3 pt-xl-0 mt-xl-n5">
+          <form style="width: 46rem;">
+          
+            <h4 class="fw-bold mb-3 pb-3" style="letter-spacing: 1px;">Let's do this!</h4>
+
+            <!-- 2 column grid layout with text inputs for the first and last names -->
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="text" id="form3Example1" class="form-control" required/>
+                  <label class="form-label" for="form3Example1">First name</label>
+                </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="text" id="form3Example2" class="form-control" required/>
+                  <label class="form-label" for="form3Example2">Last name</label>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="email" id="form3Example1" class="form-control" required/>
+                  <label class="form-label" for="form3Example1">Email</label>
+                </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="tel" id="form3Example2" class="form-control" required/>
+                  <label class="form-label" for="form3Example2">Phone</label>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="password" id="form3Example1" class="form-control" required/>
+                  <label class="form-label" for="form3Example1">Password</label>
+                </div>
+              </div>
+              <div class="col-md-6 mb-4">
+                <div class="form-outline">
+                  <input type="password" id="form3Example2" class="form-control" required/>
+                  <label class="form-label" for="form3Example2">Confirm password</label>
+                </div>
+              </div>
+            </div>
+
+            <div class="pt-1 mb-4">
+              <button class="btn btn-success btn-lg btn-block" type="button">Create Account</button>
+            </div>
+
+            <p>Already have an account? <a href="#!" class="link-success">Log in</a></p>
+
+          </form>
+
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+</section>
