--- a/Intermediate HTML and CSS/Project Sign-up Form/myapp/app/views/layouts/application.html.erb
+++ b/Intermediate HTML and CSS/Project Sign-up Form/myapp/app/views/layouts/application.html.erb
@@ -8,11 +8,10 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= stylesheet_link_tag "styles", "data-turbo-track": "reload" %>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
