--- a/Intermediate HTML and CSS/Project Sign-up Form/myapp/app/assets/stylesheets/styles.css
+++ b/Intermediate HTML and CSS/Project Sign-up Form/myapp/app/assets/stylesheets/styles.css
@@ -1,7 +1,3 @@
-body {
-    font-family: 'Norse-Bold', sans-serif !important;
-  }
-
 .bg {
     min-height: 100vh;
     background-repeat: no-repeat;
@@ -33,3 +29,14 @@ h5 {
     color: white;
     text-shadow: 2px 2px 2px black;
 }
+
+
+/* Centered text */
+.centered {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Norse-Bold', sans-serif;
+    color: white;
+  }
