--- a/Intermediate HTML and CSS/Project Sign-up Form/myapp/app/views/home/index.html.erb
+++ b/Intermediate HTML and CSS/Project Sign-up Form/myapp/app/views/home/index.html.erb
@@ -3,12 +3,19 @@
 <section class="vh-100">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-4 px-0 d-none d-sm-block">
-        <img src="https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-          alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left; background-image: url(<%= asset_path('background.avif') %>);">
+      <div class="bg-image col-sm-4 px-0 d-none d-sm-block" style="height: 100vh;">
+      <img src="https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+          alt="Background image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
       </div>
-      <div class="col-sm-8 text-black">
 
+        <div class="centered display-1 bg-dark bg-opacity-50">
+          <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"
+               alt="Background image" 
+               style="height:100px;">
+          Odin
+        </div>
+
+      <div class="col-sm-8 text-black px-0 bg-light" style="z-index: 100;">
         <div class="mt-5 px-3 ms-xl-4">
           <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
           <p class="fw-bold mb-0">This is not a real online service! You know you need something 
@@ -19,22 +26,25 @@
         <div class="mt-3 px-3 ms-xl-4">
           <p class="fw-bold mb-0">You <i>know</i> you want to.</p>
         </div>
+     
+
+      <div class="col-sm-12 text-black px-0 bg-white shadow">
 
         <div class="d-flex align-items-center h-custom-2 px-3 ms-xl-4 mt-5 pt-3 pt-xl-0 mt-xl-n5">
           <form style="width: 46rem;">
           
-            <h4 class="fw-bold mb-3 pb-3" style="letter-spacing: 1px;">Let's do this!</h4>
+            <h4 class="fw-bold ms-3 pt-4 mb-3 pb-3" style="letter-spacing: 1px;">Let's do this!</h4>
 
             <!-- 2 column grid layout with text inputs for the first and last names -->
             <div class="row">
               <div class="col-md-6 mb-4">
-                <div class="form-outline">
+                <div class="form-outline ms-3">
                   <input type="text" id="form3Example1" class="form-control" required/>
                   <label class="form-label" for="form3Example1">First name</label>
                 </div>
               </div>
               <div class="col-md-6 mb-4">
-                <div class="form-outline">
+                <div class="form-outline ms-3">
                   <input type="text" id="form3Example2" class="form-control" required/>
                   <label class="form-label" for="form3Example2">Last name</label>
                 </div>
@@ -43,39 +53,53 @@
 
             <div class="row">
               <div class="col-md-6 mb-4">
-                <div class="form-outline">
-                  <input type="email" id="form3Example1" class="form-control" required/>
-                  <label class="form-label" for="form3Example1">Email</label>
+                <div class="form-outline ms-3">
+                  <input type="email" id="form3Example3" class="form-control" required/>
+                  <label class="form-label" for="form3Example3">Email</label>
                 </div>
               </div>
               <div class="col-md-6 mb-4">
-                <div class="form-outline">
-                  <input type="tel" id="form3Example2" class="form-control" required/>
-                  <label class="form-label" for="form3Example2">Phone</label>
+                <div class="form-outline ms-3">
+                  <input type="tel" id="form3Example4" class="form-control" required/>
+                  <label class="form-label" for="form3Example4">Phone</label>
                 </div>
               </div>
             </div>
 
-            <div class="row">
-              <div class="col-md-6 mb-4">
-                <div class="form-outline">
-                  <input type="password" id="form3Example1" class="form-control" required/>
-                  <label class="form-label" for="form3Example1">Password</label>
+            <div class="row" data-controller="passwordcheck">
+              <div class="col-md-6 mb-4" >
+                <div class="form-outline ms-3">
+                  <input type="password" 
+                         id="form3Example5" 
+                         class="form-control" 
+                         data-passwordcheck-target="firstPassword"
+                         required/>
+                  <label class="form-label" for="form3Example5">Password</label>
+                  <div data-passwordcheck-target="notMatchingPassword">
+                  </div>
                 </div>
               </div>
               <div class="col-md-6 mb-4">
-                <div class="form-outline">
-                  <input type="password" id="form3Example2" class="form-control" required/>
-                  <label class="form-label" for="form3Example2">Confirm password</label>
+                <div class="form-outline ms-3">
+                  <input type="password" 
+                         id="form3Example6" 
+                         class="form-control" 
+                         data-passwordcheck-target="secondPassword" 
+                         data-action="keyup->passwordcheck#checkPassword"
+                         required/>
+                  <label class="form-label" for="form3Example6">Confirm password</label>
                 </div>
               </div>
             </div>
-
-            <div class="pt-1 mb-4">
-              <button class="btn btn-success btn-lg btn-block" type="button">Create Account</button>
+            </div>
+            </div>
+            <div class="d-flex align-items-center h-custom-2 px-3 ms-xl-4 mt-4 pt-3 pt-xl-0 mt-xl-n5">
+              <button class="btn btn-success btn-lg btn-block ms-3" type="button">Create Account</button>
             </div>
 
-            <p>Already have an account? <a href="#!" class="link-success">Log in</a></p>
+            <div class="d-flex align-items-center h-custom-2 px-3 ms-xl-4 mt-4 pt-3 pt-xl-0 mt-xl-n5">
+              <p class="ms-3">Already have an account? <a href="#!" class="link-success"><b>Log in</b></a></p>
+            </div>
 
           </form>
 
