--- a/Intermediate HTML and CSS/CSS exercises/grid-layout-3/app/assets/stylesheets/application.css
+++ b/Intermediate HTML and CSS/CSS exercises/grid-layout-3/app/assets/stylesheets/application.css
@@ -88,7 +88,7 @@
     display: grid;
     background-color: #bccbde;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 15px;
+    /* gap: 15px; */
     /* grid-column: 2 / 3; */
   }
   
