--- a/Intermediate HTML and CSS/Project Admin Dashboard/admindashboard/app/views/dashboards/index.html.erb
+++ b/Intermediate HTML and CSS/Project Admin Dashboard/admindashboard/app/views/dashboards/index.html.erb
@@ -11,14 +11,14 @@
     <div class="container">
 
       <div class="header">
-        <div class="logo">Header Logo</div>
-        <div class="menu">
-          <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-            <li>header link four</li>
-          </ul>
+        <div class="input-group mb-3" style="padding-bottom: 10px;">
+          <svg style="width:24px;height:24px" viewBox="0 -8 24 24">
+            <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+          </svg>
+          <input style="border-radius: 25px;" type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+        </div>
+        <div class="profile">
+          <%= image_tag "profile.png", :class=> "img-circular" %>
         </div>
       </div>
 
@@ -85,41 +85,95 @@
             <path fill="currentColor" d="M10,17L6,13L7.41,11.59L10,14.17L16.59,7.58L18,9M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1Z" />
           </svg> Privacy
         </div>
-
+      </div>
+      
+      <div class="projects">
+        <h5>Your Projects</h5>
+        <div class="project-cards">
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
+          <div class="card">
+            <p class="title">Article Title</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
+        </div>
       </div>
 
-      <div class="nav">
-        <ul>
-          <li>Latest Articles</li>
-          <li>Most Views</li>
-          <li>Featured</li>
-        </ul>
+      <div class="announcements">
+        <div class="announcement-cards">
+          <h5>Announcements</h5>
+          <div class="card">
+            <p class="title">Announcement 1</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          </div>
+        </div>
       </div>
 
-      <div class="article">
+      <div class="trending">
+        <h5>Trending</h5>
         <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-        </div>
-        <div class="card">
-          <p class="title">Article Title</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+          <div class="trening-cards">
+            <div class="title">
+              <svg style="width:36px;height:36px" viewBox="0 0 26 26">
+                <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
+              </svg>
+                @tegan 1
+                <br>
+                World Peace Builder
+            </div>
+            
+
+            <div class="title">
+              <svg style="width:36px;height:36px" viewBox="0 0 26 26">
+                <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
+              </svg>
+              @morgan 1
+              <br>
+              Super Cool Project
+            </div>
+            
+
+            <div class="title">
+              <svg style="width:36px;height:36px" viewBox="0 0 26 26">
+                <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
+              </svg>
+              @kendall
+              <br>
+              Life Changing App
+            </div>
+
+            <div class="title">
+              <svg style="width:36px;height:36px" viewBox="0 0 26 26">
+                <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
+              </svg>
+              @alex
+              <br>
+              No Traffix Maker
+            </div>
+
+          </div>
         </div>
       </div>
      
