--- a/Foundations/Flexbox/Project - Landing Page/styles.css
+++ b/Foundations/Flexbox/Project - Landing Page/styles.css
@@ -57,6 +57,7 @@ ul {
     color: #e5e7eb;
     padding-top: 100px;
     padding-bottom: 100px;
+    gap: 25px;
 }
 
 .leftinfo {
@@ -83,7 +84,7 @@ ul {
     font-size: 18px;
 }
 
-.infobutton {
+.headerbutton {
     background-color: #3882f6;
     border: #1F2937;
     font-size: 16px;
@@ -95,9 +96,42 @@ ul {
 }
 
 .information {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     height: 100%;
     padding-left: 150px;
     padding-right: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.informationtext {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    padding-bottom: 32px;
+}
+
+.boxes {
+    display: flex;
+    gap: 48px;
+}
+
+.box{
+    height: 140px;
+    width: 150px;
+    border-radius: 15px;
+    border-color: #3882f6;
+    border-style:solid;
+    border-width: 3px;
+    margin-bottom: 8px;
+}
+
+.boxtext {
+    text-align: center;
+    height: 140px;
+    width: 150px;
 }
 
 .quote {
@@ -116,7 +150,9 @@ ul {
 
 .footer {
     display: flex;
+    align-items: center;
     justify-content: center;
     background-color: #1F2937;
     color: #e5e7eb;
+    height: 100px;
 }
