--- a/Foundations/Flexbox/Project - Landing Page/styles.css
+++ b/Foundations/Flexbox/Project - Landing Page/styles.css
@@ -55,8 +55,8 @@ ul {
     padding-left: 175px;
     padding-right: 175px;
     color: #e5e7eb;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 48px;
+    padding-bottom: 48px;
     gap: 25px;
 }
 
@@ -130,7 +130,6 @@ ul {
 
 .boxtext {
     text-align: center;
-    height: 140px;
     width: 150px;
 }
 
@@ -142,8 +141,10 @@ ul {
     background-color: #e5e7eb;
     padding-left: 150px;
     padding-right: 150px;
-    padding-top: 96px;
-    padding-bottom: 96px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    /* padding-top: 96px; */
+    /* padding-bottom: 96px; */
 }
 
 .quotetext {
@@ -162,9 +163,52 @@ ul {
 }
 
 .signup {
+    display: flex;
     height: 100%;
     padding-left: 150px;
     padding-right: 150px;
+    padding-top: 64px;
+    padding-bottom: 64px;
+}
+
+.signupbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* justify-content: space-between; */
+    width: 100%;
+    background-color: #3882f6;
+    padding-left: 48px;
+    padding-right: 48px;
+    gap: 96px;
+    border-radius: 10px;
+}
+
+.signupboxtitle {
+    /* padding-top: 32px; */
+    /* padding-bottom: 32px; */
+    color: #e5e7eb;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.signupboxtext {
+    /* padding-top: 32px; */
+    /* padding-bottom: 32px; */
+    color: #e5e7eb;
+    font-size: 16px;
+}
+
+.signupbutton {
+    background-color: #3882f6;
+    border: #e5e7eb;
+    border-style: solid;
+    border-width: 3px;
+    font-size: 16px;
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+    color: #e5e7eb;
 }
 
 .footer {
