--- a/Advanced HTML and CSS/Project - Personal Portfolio/styles.css
+++ b/Advanced HTML and CSS/Project - Personal Portfolio/styles.css
@@ -10,9 +10,47 @@ body {
     flex-direction: column;
 }
 
+@media (max-width: 770px) {
+    .header {
+        flex-direction: column;
+    }
+}
+
 .header {
     flex: 1;
+    display: flex;
+    /* flex-shrink: 0; */
+    /* align-items: center; */
+    /* justify-content: center; */
     background-color: #ffeead;
+    gap: 5rem;
+    padding: 5rem;
+}
+
+.headerimage > img {
+    /* flex: 1; */
+    /* height: 214px; */
+    /* width: 320px; */
+    /* max-width: 350px; */
+    width: 100%;
+    height: auto;
+}
+
+.headercard {
+    flex: 1;
+}
+
+.card {
+    border-style: solid;
+    border-width: thin;
+    max-width: 450px;
+    /* height: 150px; */
+    /* width: 450px; */
+    padding: 1rem;
+}
+
+.card > p {
+    font-size: small;
 }
 
 .container {
@@ -48,24 +86,14 @@ body {
 }
 
 .footer {
-    flex: 1;
     background-color: peachpuff;
     display: flex;
+    align-items: center;
+    flex-direction: column;
+
     gap: 1rem;
-    padding-top: 1rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-.footerleft {
-    flex: 1;
-}
-
-.footerright {
-    flex: 1;
+    padding: 1rem;
 }
 
 .footertext {
-    padding-top: 8px;
-    padding-bottom: 8px;
 }
